add payment and trips
