# backend-laravel/app/Models/Driver.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Driver extends Model
+{
+    use HasFactory;
+    public $fillable = [
+        'user_id',
+        'name',
+        'address',
+        'license_path',
+        'activated',
+        'phone'
+    ];
+}
